style: theme color

--- a/svelte/form/src/app.html
+++ b/svelte/form/src/app.html
@@ -30,12 +30,12 @@
 		<link href="/icons/icon-384x384.png" rel="apple-touch-icon" sizes="384x384" />
 		<link href="/icons/icon-512x512.png" rel="apple-touch-icon" sizes="512x512" />
 
-		<link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#7888ff" />
-		<meta name="msapplication-TileColor" content="#7888ff" />
+		<link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#ff97e7" />
+		<meta name="msapplication-TileColor" content="#ff97e7" />
 		<meta name="msapplication-config" content="/icons/browserconfig.xml" />
 
 		<link crossorigin="anonymous" href="/manifest.webmanifest" rel="manifest" />
-		<meta content=#7888ff" name="theme-color" />
+		<meta content=#ff97e7" name="theme-color" />
 
 		<meta name="robots" content="noindex" />
 
