feat: social image and tagline

--- a/svelte/form/src/app.html
+++ b/svelte/form/src/app.html
@@ -6,16 +6,16 @@
 
 		<title>Juno</title>
 		<link href="https://signup.juno.build" rel="canonical" />
-		<meta content="Build web3 apps faster than ever" name="description" />
+		<meta content="Build Web3 Apps Like Its Web2." name="description" />
 		<meta content="Juno" property="og:title" />
-		<meta content="Build web3 apps faster than ever" property="og:description" />
+		<meta content="Build Web3 Apps Like Its Web2." property="og:description" />
 		<meta content="website" property="og:type" />
 		<meta content="https://signup.juno.build" property="og:url" />
-		<meta content="https://signup.juno.build/images/social-image.jpg" property="og:image" />
+		<meta content="https://signup.juno.build/images/social_image.jpg" property="og:image" />
 		<meta content="summary_large_image" name="twitter:card" />
 		<meta content="Juno" name="twitter:title" />
-		<meta content="Build web3 apps faster than ever" name="twitter:description" />
-		<meta content="https://signup.juno.build/images/social-image.jpg" name="twitter:image" />
+		<meta content="Build Web3 Apps Like Its Web2." name="twitter:description" />
+		<meta content="https://signup.juno.build/images/social_image.jpg" name="twitter:image" />
 		<meta content="@JunoBuild" name="twitter:creator" />
 
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
