feat: demo list assets

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -17,6 +17,8 @@
       <button id="list">List</button>
       <button id="delete">Delete</button>
       <hr/>
+      <button id="list_assets">List assets</button>
+      <hr/>
       <input id="file" type="file">Upload</input>
       <button id="upload">Upload</button>
       <div id="result"></div>
