--- a/react/poll/public/index.html
+++ b/react/poll/public/index.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#f1d654" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="A live voting dapp that uses Juno datastore and authentication"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Juno Example</title>
+    <title>Juno Live Voting</title>
 
     <meta name="robots" content="noindex" />
   </head>
