feat: add orbiter / analytics to vanilla sample

--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -19,6 +19,9 @@
       <hr/>
       <button id="list_assets">List assets</button>
       <hr/>
+      <button id="push">Push page</button>
+      <button id="track">Track event</button>
+      <hr/>
       <input id="file" type="file">Upload</input>
       <button id="upload">Upload</button>
       <div id="result"></div>
