feat: canister id on mainnet

--- a/vanilla/vite-typescript/index.html
+++ b/vanilla/vite-typescript/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="app">
+      <h1>TESTING</h1>
       <button id="signin">Sign in</button>
       <button id="signout">Sign Out</button>
       <hr/>
