feat: setMany example

--- a/rust/hooks/index.html
+++ b/rust/hooks/index.html
@@ -13,6 +13,7 @@
       <button id="signout">Sign Out</button>
       <hr/>
       <button id="say">Say hello</button>
+      <button id="sayMany">Say many hello</button>
       <button id="read">Read</button>
       <button id="delete">Delete</button>
       <hr/>
