--- a/rust/hooks/index.html
+++ b/rust/hooks/index.html
@@ -11,6 +11,7 @@
       <h1>TESTING HOOKS</h1>
       <button id="signin">Sign in</button>
       <button id="signout">Sign Out</button>
+      <button id="version">Version</button>
       <hr/>
       <button id="say">Say hello</button>
       <button id="sayMany">Say many hello</button>
