--- a/rust/https-outcalls/index.html
+++ b/rust/https-outcalls/index.html
@@ -14,6 +14,8 @@
       <hr/>
       <button id="set">Set</button>
       <button id="get">Get</button>
+      <hr/>
+      <div id="result"></div>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
