feat: fetch balance

--- a/rust/ethereum-address/index.html
+++ b/rust/ethereum-address/index.html
@@ -12,9 +12,11 @@
       <button id="signin">Sign in</button>
       <button id="signout">Sign Out</button>
       <hr/>
-      <button id="get">Get</button>
+      <button id="get">Get ETH address</button>
+      <p>Ethereum address: <output id="address"></output></p>
       <hr/>
-      <p>Ethereum address: <output id="result"></output></p>
+      <button id="check">Check balance</button>
+      <p>SepoliaETH balance: <output id="balance"></output></p>
     </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
