--- a/functions/typescript/hooks/index.html
+++ b/functions/typescript/hooks/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -12,13 +12,13 @@
       <button id="signin">Sign in</button>
       <button id="signout">Sign Out</button>
       <button id="version">Version</button>
-      <hr/>
+      <hr />
       <button id="say">Say hello</button>
       <button id="sayMany">Say many hello</button>
       <button id="read">Read</button>
       <button id="delete">Delete</button>
-      <hr/>
-      <input id="file" type="file">Upload</input>
+      <hr />
+      <input id="file" type="file" />
       <button id="upload">Upload</button>
       <div id="result"></div>
     </div>
